# Emotional-Speech-Generation

./: .gitignore  DESIGN.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_solution.sh
config/: __init__.py  emotions.yaml  logging.yaml  settings.py
docs/: api.md  deployment.md
scripts/: setup_models.py  solution.py
src/api/: dependencies.py  main.py  middleware.py
src/api/v1/: __init__.py
src/api/v1/routes/: __init__.py  emotions.py  health.py  tts.py
src/api/v1/schemas/: emotions.py  errors.py  tts.py
src/core/: __init__.py  audio_processor.py  emotion_controller.py  text_processor.py  tts_engine.py
src/services/: speech_service.py
src/utils/: exceptions.py  logging.py
tests/: conftest.py
tests/api/: test_emotions.py  test_health.py
tests/unit/: test_audio_processor.py  test_emotion_controller.py  test_text_processor.py
